ya se ve el de editar como el de crear ya que es la misma plantilla pero le falta el que funcionen porque no me edita todo

--- a/templates/surveys/admin/survey_dashboard_admin.html
+++ b/templates/surveys/admin/survey_dashboard_admin.html
@@ -69,7 +69,7 @@
               <button class="btn btn-light border kebab" data-bs-toggle="dropdown" aria-expanded="false">⋮</button>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Notificar a los usuarios</a></li>
-                <li><a class="dropdown-item" href="#">Editar</a></li>
+                <li><a class="dropdown-item" href="{% url 'survey_edit' s.id %}">Editar</a></li>
                 <li><a class="dropdown-item" href="#" data-action="rename" data-url="#">Renombrar</a></li>
                 <li><hr class="dropdown-divider"></li>
                 <li><a class="dropdown-item" href="{% url 'survey_export_excel' s.id %}">Descargar Excel</a></li>
