acomodo de opciones de encuesta

--- a/static/css/survey.css
+++ b/static/css/survey.css
@@ -425,3 +425,12 @@
   text-overflow:ellipsis; 
   white-space:nowrap; 
 }
+
+.table-responsive{
+  overflow: visible;       
+}
+
+/* por si algo lo tapa */
+.dropdown-menu{
+  z-index: 2000;
+}
