--- a/templates/surveys/admin/survey_dashboard_admin.html
+++ b/templates/surveys/admin/survey_dashboard_admin.html
@@ -65,8 +65,9 @@
           <td>{{ s.position }}</td>
 
           <td class="text-end">
-            <div class="dropdown">
-              <button class="btn btn-light border kebab" data-bs-toggle="dropdown" aria-expanded="false">⋮</button>
+            <div class="d-inline-block position-relative ">
+              <button class="btn btn-light border kebab"
+                      data-bs-toggle="dropdown" aria-expanded="false">⋮</button>
               <ul class="dropdown-menu dropdown-menu-end">
                 <li><a class="dropdown-item" href="#">Notificar a los usuarios</a></li>
                 <li><a class="dropdown-item" href="{% url 'survey_edit' s.id %}">Editar</a></li>
@@ -75,10 +76,12 @@
                 <li><a class="dropdown-item" href="{% url 'survey_export_excel' s.id %}">Descargar Excel</a></li>
                 <li><a class="dropdown-item" href="#">Descargar Excel filtrado</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item text-danger" href="#" data-action="delete" data-url="{% url 'survey_delete' s.id %}">Eliminar</a></li>
+                <li><a class="dropdown-item text-danger" href="#"
+                      data-action="delete" data-url="{% url 'survey_delete' s.id %}">Eliminar</a></li>
               </ul>
             </div>
           </td>
+
         </tr>
       {% empty %}
         <tr><td colspan="6" class="text-center text-muted py-4">No hay encuestas aún.</td></tr>
