nuevas opciones para pregunta

--- a/templates/surveys/admin/survey_new.html
+++ b/templates/surveys/admin/survey_new.html
@@ -297,6 +297,8 @@
               <button type="button" class="list-group-item list-group-item-action" data-type="single">Opciones (selección única)</button>
               <button type="button" class="list-group-item list-group-item-action" data-type="multiple">Opciones (selección múltiple)</button>
               <button type="button" class="list-group-item list-group-item-action" data-type="rating">Calificación</button>
+              <button type="button" class="list-group-item list-group-item-action" data-type="assessment">Evaluación</button>
+              <button type="button" class="list-group-item list-group-item-action" data-type="frecuency">Frecuencia</button>
               <button type="button" class="list-group-item list-group-item-action" data-type="none">Sin respuesta</button>
             </div>
           </div>
